N高課題のヘッダー制作着手

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -2,4 +2,24 @@
 <html lang="ja">
 	<head>
 		<meta charset="UTF-8">
-		
+		<title>N高について | N高等学校(通信生高校 広域・単位制)</title>
+		<link rel="stylesheet" href="normalize.css">
+		<link rel="stylesheet" href="n_highschool.css">
+	</head>
+	
+	<body>
+
+		<header id="n_school_header">
+			<div id="n_header_top">
+				<p class="header_message">カドカワが創る新しいネットの高校</p>
+			</div>
+
+		</header>
+
+
+
+
+
+	</body>
+</html>
+
