ヘッダートップのリスト最後尾修正中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -10,17 +10,19 @@
 	<body>
 
 		<header id="n_school_header">
-			<div id="n_header_top">
-				<p class="header_message">カドカワが創る新しいネットの高校</p>
-				<ul class="header_navi_top">
-					<li><a href="">入学案内</a></li>
-					<li><a href="">キャンパス</a></li>
-					<li><a href="">ニュース・トピック</a></li>
-					<li><a href="">N高ブログ</a></li>
-					<li><a href="">WEB出願</a></li>
-					<li><a href="">卒業された方へ</a></li>
-					<li><a href="">生徒用ログイン</a></li>
-				</ul>
+			<div id="n_header_backcolor">
+				<div id="n_header_top">
+					<p class="header_message">カドカワが創る新しいネットの高校</p>
+					<ul class="header_navi_top">
+						<li><a href="">入学案内</a></li>
+						<li><a href="">キャンパス</a></li>
+						<li><a href="">ニュース・トピック</a></li>
+						<li><a href="">N高ブログ</a></li>
+						<li><a href="">WEB出願</a></li>
+						<li><a href="">卒業された方へ</a></li>
+						<li><a href="">生徒用ログイン</a></li>
+					</ul>
+				</div>
 			</div>
 
 			<div id="n_header_middle">
