・電話番号やSNSの画像を用意 ・N高のロゴを挿入

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -26,6 +26,16 @@
 			</div>
 
 			<div id="n_header_middle">
+				<p class="n_school_logo"><img src="./image/n_school_logo.png"></p>
+				<ul class="header_middle_info">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+
+
+
 
 
 
