・電話番号、ロゴの導入 ・floatを使って横並び

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -28,10 +28,10 @@
 			<div id="n_header_middle">
 				<p class="n_school_logo"><img src="./image/n_school_logo.png"></p>
 				<ul class="header_middle_info">
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li><img src="./image/nschool_tel.png"></li>
+					<li><img src="./image/f_button.png"></li>
+					<li><img src="./image/t_button.png"></li>
+					<li><img src="./image/y_button.png"></li>
 				</ul>
 
 
