・ヘッダートップの修正 ・SNSナビリストの調整中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -8,8 +8,9 @@
 	</head>
 	
 	<body>
-
+	<!--***ヘッダーのブロック***-->
 		<header id="n_school_header">
+		<!--***ヘッダートップのナビ***-->
 			<div id="n_header_backcolor">
 				<div id="n_header_top">
 					<p class="header_message">カドカワが創る新しいネットの高校</p>
@@ -24,23 +25,17 @@
 					</ul>
 				</div>
 			</div>
-
+			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<div id="n_header_middle">
 				<p class="n_school_logo"><img src="./image/n_school_logo.png"></p>
 				<ul class="header_middle_info">
-					<li><img src="./image/nschool_tel.png"></li>
-					<li><img src="./image/f_button.png"></li>
-					<li><img src="./image/t_button.png"></li>
-					<li><img src="./image/y_button.png"></li>
+						<li class="nschool_tel"><img src="./image/nschool_tel.png"></li>
+						<li class="f_button"><a href=""><img src="./image/f_button.png"></a></li>
+						<li class="t_button"><a href=""><img src="./image/t_button.png"></a></li>
+						<li class="y_button"><a href=""><img src="./image/y_button.png"></a></li>
 				</ul>
-
-
-
-
-
-
-
 			</div>
+
 
 
 
