--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -28,12 +28,15 @@
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<div id="n_header_middle">
 				<p class="n_school_logo"><img src="./image/n_school_logo.png"></p>
-				<ul class="header_middle_info">
-						<li class="nschool_tel"><img src="./image/nschool_tel.png"></li>
+
+				<div class="header_middle_right">
+					<ul class="sns_button">
+						<li class="nschool_tel"><img src="./image/nschool_tel.png"></p>
 						<li class="f_button"><a href=""><img src="./image/f_button.png"></a></li>
 						<li class="t_button"><a href=""><img src="./image/t_button.png"></a></li>
 						<li class="y_button"><a href=""><img src="./image/y_button.png"></a></li>
-				</ul>
+					</ul>
+				</div>
 			</div>
 
 
