ヘッダー下のコース紹介ナビを制作・調整中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -39,10 +39,33 @@
 				</div>
 			</div>
 
+			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
+			<div id="n_header_bottom">
+				<ul class="course_info">
+					<li class="info_top">N高について</li>
+					<li class="info_bottom">About School</li>
+				</ul>
+				<ul class="course_info">
+					<li class="info_top">ネットコース</li>
+					<li class="info_bottom">Net Course</li>
+				</ul>
+				<ul class="course_info">
+					<li class="info_top">通学コース</li>
+					<li class="info_bottom">Commute Course</li>
+				</ul>
+				<ul class="course_info">
+					<li class="info_top">提携スクール</li>
+					<li class="info_bottom">Alliance School</li>
+				</ul>
+			</div>
 
 
 
 
+
+
+
+			</div>
 
 		</header>
 
