ヘッダーコースナビの作成 ・inline-blockを活用 ・画像を配置

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -42,20 +42,20 @@
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<div id="n_header_bottom">
 				<ul class="course_info">
-					<li class="info_top">N高について</li>
-					<li class="info_bottom">About School</li>
+					<li class="info_top_first">N高について</li>
+					<li><img src="./image/About_school.png"></li>
 				</ul>
 				<ul class="course_info">
 					<li class="info_top">ネットコース</li>
-					<li class="info_bottom">Net Course</li>
+					<li><img src="./image/Net_Course.png"></li>
 				</ul>
 				<ul class="course_info">
 					<li class="info_top">通学コース</li>
-					<li class="info_bottom">Commute Course</li>
+					<li><img src="./image/Commute Course.png"></li>
 				</ul>
 				<ul class="course_info">
 					<li class="info_top">提携スクール</li>
-					<li class="info_bottom">Alliance School</li>
+					<li><img src="./image/Allince School.png"></li>
 				</ul>
 			</div>
 
