--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -40,24 +40,24 @@
 			</div>
 
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
-			<div id="n_header_bottom">
+			<nav id="n_header_bottom">
 				<ul class="course_info">
 					<li class="info_top_first">N高について</li>
-					<li><img src="./image/About_school.png"></li>
+					<li class="about_school"><img src="./image/About_school.png"></li>
 				</ul>
 				<ul class="course_info">
 					<li class="info_top">ネットコース</li>
-					<li><img src="./image/Net_Course.png"></li>
+					<li class="net_course"><img src="./image/Net_Course.png"></li>
 				</ul>
 				<ul class="course_info">
 					<li class="info_top">通学コース</li>
-					<li><img src="./image/Commute Course.png"></li>
+					<li class="commute_course"><img src="./image/Commute Course.png"></li>
 				</ul>
 				<ul class="course_info">
 					<li class="info_top">提携スクール</li>
-					<li><img src="./image/Allince School.png"></li>
+					<li class="allince_school"><img src="./image/Allince School.png"></li>
 				</ul>
-			</div>
+			</nav>
 
 
 
