--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -42,20 +42,16 @@
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<nav id="n_header_bottom">
 				<ul class="course_info">
-					<li class="info_top_first">N高について</li>
-					<li class="about_school"><img src="./image/About_school.png"></li>
+					<li class="info_top_first">N高について<br><a href=""><img src="./image/About_school.png" alt="N高についてのリンク" class="about_school"></a></li>
 				</ul>
 				<ul class="course_info">
-					<li class="info_top">ネットコース</li>
-					<li class="net_course"><img src="./image/Net_Course.png"></li>
+					<li class="info_top">ネットコース<br><a href=""><img src="./image/Net_Course.png" alt="ネットコースのリンク" class="net_course"></a></li>
 				</ul>
 				<ul class="course_info">
-					<li class="info_top">通学コース</li>
-					<li class="commute_course"><img src="./image/Commute Course.png"></li>
+					<li class="info_top">通学コース<br><a href=""><img src="./image/Commute Course.png" alt="通学コースのリンク" class="commute_course"></a></li>
 				</ul>
 				<ul class="course_info">
-					<li class="info_top">提携スクール</li>
-					<li class="allince_school"><img src="./image/Allince School.png"></li>
+					<li class="info_top">提携スクール<br><a href=""><img src="./image/Allince School.png" alt="提携スクールのリンク" class="allince_school"></a></li>
 				</ul>
 			</nav>
 
