・ulの使い回しを辞めて、全て個別のclassに変更 ・最後のliにborder-rightを指定 ・余白の調整

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -41,16 +41,16 @@
 
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<nav id="n_header_bottom">
-				<ul class="course_info">
+				<ul class="course_info_nschool">
 					<li class="info_top_first">N高について<br><a href=""><img src="./image/About_school.png" alt="N高についてのリンク" class="about_school"></a></li>
 				</ul>
-				<ul class="course_info">
+				<ul class="course_info_netcourse">
 					<li class="info_top">ネットコース<br><a href=""><img src="./image/Net_Course.png" alt="ネットコースのリンク" class="net_course"></a></li>
 				</ul>
-				<ul class="course_info">
+				<ul class="course_info_commutecourse">
 					<li class="info_top">通学コース<br><a href=""><img src="./image/Commute Course.png" alt="通学コースのリンク" class="commute_course"></a></li>
 				</ul>
-				<ul class="course_info">
+				<ul class="course_info_allinceschool">
 					<li class="info_top">提携スクール<br><a href=""><img src="./image/Allince School.png" alt="提携スクールのリンク" class="allince_school"></a></li>
 				</ul>
 			</nav>
