フッターナビ右側リンクの位置・デザイン調整 ・inline-tableで作成 ・高さが合わなかったので、position:relativeで調整

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -41,30 +41,31 @@
 
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<nav id="n_header_bottom">
-
-				<ul class="course_info_nschool">
-					<li class="info_top_first">N高について</li>
-					<li class="info_nschool"><a href=""></a></li>
-				</ul>
-
-				<ul class="course_info_netcourse">
-					<li class="info_top">ネットコース</li>
-					<li class="info_netcourse"><a href=""></a></li>
-				</ul>
-
-				<ul class="course_info_commutecourse">
-					<li class="info_top">通学コース</li>
-					<li class="info_commutecourse"><a href=""></a></li>
-				</ul>
-
-				<ul class="course_info_allinceschool">
-					<li class="info_top">提携スクール</li>
-					<li class="allince_school"><a href=""></a></li>
-				</ul>
-
+				<div class="header_bottom_nav">
+					<ul class="course_info_nschool">
+						<li class="info_top_first">N高について</li>
+						<li class="info_nschool"><a href=""></a></li>
+					</ul>
+					<ul class="course_info_netcourse">
+						<li class="info_top">ネットコース</li>
+						<li class="info_netcourse"><a href=""></a></li>
+					</ul>
+					<ul class="course_info_commutecourse">
+						<li class="info_top">通学コース</li>
+						<li class="info_commutecourse"><a href=""></a></li>
+					</ul>
+					<ul class="course_info_allinceschool">
+						<li class="info_top">提携スクール</li>
+						<li class="allince_school"><a href=""></a></li>
+					</ul>
+				</div>
+				<div id="introduce_link">
+					<ul class="introduce_box">
+						<li>説明会・相談会</li>
+						<li>資料請求</li>
+					</ul>
+				</div>
 			</nav>
-
-
 		</header>
 
 
