ヘッダーナビのコース紹介リンク完成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -12,7 +12,7 @@
 		<header id="n_school_header">
 		<!--***ヘッダートップのナビ***-->
 			<div id="n_header_backcolor">
-				<div id="n_header_top">
+				<nav id="n_header_top">
 					<p class="header_message">カドカワが創る新しいネットの高校</p>
 					<ul class="header_navi_top">
 						<li><a href="">入学案内</a></li>
@@ -23,7 +23,7 @@
 						<li><a href="">卒業された方へ</a></li>
 						<li><a href="">生徒用ログイン</a></li>
 					</ul>
-				</div>
+				</nav>
 			</div>
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<div id="n_header_middle">
@@ -48,24 +48,25 @@
 					</ul>
 					<ul class="course_info_netcourse">
 						<li class="info_top">ネットコース</li>
-						<li class="info_netcourse"><a href=""></a></li>
+						<a href=""><li class="info_netcourse"></li></a>
 					</ul>
 					<ul class="course_info_commutecourse">
 						<li class="info_top">通学コース</li>
-						<li class="info_commutecourse"><a href=""></a></li>
+						<a href=""><li class="info_commutecourse"></li></a>
 					</ul>
 					<ul class="course_info_allinceschool">
 						<li class="info_top">提携スクール</li>
-						<li class="allince_school"><a href=""></a></li>
+						<a href=""><li class="allince_school"></li></a>
 					</ul>
 				</div>
 				<div id="introduce_link">
 					<ul class="introduce_box">
-						<li>説明会・相談会</li>
-						<li>資料請求</li>
+						<li><a href="">説明会・相談会</a></li>
+						<li><a href="">資料請求</a></li>
 					</ul>
 				</div>
 			</nav>
+
 		</header>
 
 
