ヘッダーテキストナビの作成 ・flex boxで作成開始

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -67,6 +67,15 @@
 				</div>
 			</nav>
 
+			<nav id="header_list_link">
+				<div class="header_text_link">
+					<ul class="text_links">
+						<li>高卒資格取得について</li>
+						<li>Advanced Program</li>
+					</ul>
+				</div>
+			</nav>
+
 		</header>
 
 
