ヘッダーテキストリンクの整列準備 liのテキストを入れた inline-blockを検討中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -72,6 +72,18 @@
 					<ul class="text_links">
 						<li>高卒資格取得について</li>
 						<li>Advanced Program</li>
+						<li>ITツール</li>
+						<li>イベント・学校行事</li>
+						<li>N高起業部</li>
+						<li>在校生の声</li>
+						<li>保護者の声</li>
+						<li>生徒の進路・活動実績</li>
+						<li>学校関係者・著名人からのメッセージ</li>
+						<li>制服制度</li>
+						<li>キャンパス</li>
+						<li>動画一覧</li>
+						<li>学費</li>
+						<li>N SATNDARD</li>
 					</ul>
 				</div>
 			</nav>
