--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -68,24 +68,22 @@
 			</nav>
 
 			<nav id="header_list_link">
-				<div class="header_text_link">
 					<ul class="text_links">
-						<li>高卒資格取得について</li>
-						<li>Advanced Program</li>
-						<li>ITツール</li>
-						<li>イベント・学校行事</li>
-						<li>N高起業部</li>
-						<li>在校生の声</li>
-						<li>保護者の声</li>
-						<li>生徒の進路・活動実績</li>
-						<li>学校関係者・著名人からのメッセージ</li>
-						<li>制服制度</li>
-						<li>キャンパス</li>
-						<li>動画一覧</li>
-						<li>学費</li>
-						<li>N SATNDARD</li>
+						<li><a href="">高卒資格取得について</a></li>
+						<li><a href="">Advanced Program</a></li>
+						<li><a href="">ITツール</a></li>
+						<li><a href="">イベント・学校行事</a></li>
+						<li><a href="">N高起業部</a></li>
+						<li><a href="">在校生の声</a></li>
+						<li><a href="">保護者の声</a></li>
+						<li><a href="">生徒の進路・活動実績</a></li>
+						<li><a href="">学校関係者・著名人からのメッセージ</a></li>
+						<li><a href="">制服制度</a></li>
+						<li><a href="">キャンパス</a></li>
+						<li><a href="">動画一覧</a></li>
+						<li><a href="">学費</a></li>
+						<li><a href="">N SATNDARD</a></li>
 					</ul>
-				</div>
 			</nav>
 
 		</header>
