N高のメインコンテンツ着手

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -71,7 +71,7 @@
 					<ul class="text_links">
 						<li><a href="">高卒資格取得について</a></li>
 						<li><a href="">Advanced Program</a></li>
-						<li><a href="">ITツール</a></li>
+					s	<li><a href="">ITツール</a></li>
 						<li><a href="">イベント・学校行事</a></li>
 						<li><a href="">N高起業部</a></li>
 						<li><a href="">在校生の声</a></li>
@@ -85,8 +85,17 @@
 						<li><a href="">N SATNDARD</a></li>
 					</ul>
 			</nav>
-
 		</header>
+
+		<main id="nschool_maincolumn">
+			<div class="about_school">
+				<h1 id="n_highschool">
+					<span class="title">N高について</span>
+				</h1>
+			</div>
+
+
+		</main>
 
 
 
