・N高のイメージ画像を配置 ・h1のタイトル導入

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -71,7 +71,7 @@
 					<ul class="text_links">
 						<li><a href="">高卒資格取得について</a></li>
 						<li><a href="">Advanced Program</a></li>
-					s	<li><a href="">ITツール</a></li>
+						<li><a href="">ITツール</a></li>
 						<li><a href="">イベント・学校行事</a></li>
 						<li><a href="">N高起業部</a></li>
 						<li><a href="">在校生の声</a></li>
