・背景画像に入れるh1の調整 ・擬似要素でボーダーを描画

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -87,11 +87,14 @@
 			</nav>
 		</header>
 
+		<!--***N高のメインコラム***-->
 		<main id="nschool_maincolumn">
+			<!--***N高のイメージ画像部分***-->
 			<div class="about_school">
 				<h1 id="n_highschool">
-					<span class="title">N高について</span>
+					<span class="nschool_title">N高について</span>
 				</h1>
+				<p class="h1_aboutschool"></p>
 			</div>
 
 
