背景イメージ画像下のパンくずリスト着手

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -94,8 +94,14 @@
 				<h1 id="n_highschool">
 					<span class="nschool_title">N高について</span>
 				</h1>
-				<p class="h1_aboutschool"></p>
+				<p class="h1_aboutschool">About School</p>
 			</div>
+			<!--***イメージ画像下のパンくずリスト***-->
+			<ul class="">
+				<li></li>
+				<li></li>
+			</ul>
+
 
 
 		</main>
