・パンくずリストの作成 ・ヘッダートップ右上"生徒用ログイン"背景色範囲の修正中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -97,9 +97,9 @@
 				<p class="h1_aboutschool">About School</p>
 			</div>
 			<!--***イメージ画像下のパンくずリスト***-->
-			<ul class="">
-				<li></li>
-				<li></li>
+			<ul class="n_breadcrumbs">
+				<li><a href="">N高等学校　|  通信制高校(広域)・単位制</a></li>
+				<li>N高について</li>
 			</ul>
 
 
