H1タイトルの白い下線を修正 → left right を0にしてmargin:autoにする

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -102,6 +102,14 @@
 				<li>N高について</li>
 			</ul>
 
+			<!--***N高のイメージ画像部分***-->
+			<section id="nschool_mission">
+				<h2 id="IT_Global">
+					<span class="creativity">IT×グローバル社会を生き抜く<br>
+					"創造力"を身につけ、<br>世界で活躍する人材を育成する。</span>
+				</h2>
+			</section>
+
 
 
 		</main>
