ヘッダートップ右上のアイコン調整中 ・liのaタグにidを割り振ってCSSで調整をテスト ・liを追加して調整するか検討中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -21,7 +21,7 @@
 						<li><a href="">N高ブログ</a></li>
 						<li><a href="">WEB出願</a></li>
 						<li><a href="">卒業された方へ</a></li>
-						<li><a href="">生徒用ログイン</a></li>
+						<li><a href="" id="login_icon">生徒用ログイン</a></li>
 					</ul>
 				</nav>
 			</div>
