floatでズレた位置の調整 ・基本position : relativeで調整中 ・clear fixは使い所がはっきり分からない、大幅にズレる為、一旦見送り

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -14,7 +14,7 @@
 			<div id="n_header_backcolor">
 				<nav id="n_header_top">
 					<p class="header_message">カドカワが創る新しいネットの高校</p>
-					<ul class="header_navi_top clearfix">
+					<ul class="header_navi_top">
 						<li><a href="">入学案内</a></li>
 						<li><a href="">キャンパス</a></li>
 						<li><a href="">ニュース・トピック</a></li>
@@ -27,9 +27,9 @@
 			</div>
 			<!--***ヘッダー中央(ロゴ・TEL・SNSアイコン)***-->
 			<div id="n_header_middle">
-				<p class="n_school_logo clearfix"><img src="./image/n_school_logo.png"></p>
+				<p class="n_school_logo"><img src="./image/n_school_logo.png"></p>
 
-				<div class="header_middle_right clearfix">
+				<div class="header_middle_right">
 					<ul class="sns_button">
 						<li class="nschool_tel"><img src="./image/nschool_tel.png"></p>
 						<li class="f_button"><a href=""><img src="./image/f_button.png"></a></li>
