メインコラムのH2トップメッセージを作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -102,7 +102,7 @@
 				<li>N高について</li>
 			</ul>
 
-			<!--***N高のイメージ画像部分***-->
+			<!--***メインコラムのH2 トップメッセージ***-->
 			<section id="nschool_mission">
 				<h2 id="IT_Global">
 					<span class="creativity">IT×グローバル社会を生き抜く<br>
