h2 2番目の下線調整

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -108,6 +108,10 @@
 					<span class="creativity">IT×グローバル社会を生き抜く<br>
 					"創造力"を身につけ、<br>世界で活躍する人材を育成する。</span>
 				</h2>
+				<h2 id="subjective_action">
+					<span class="my_thinking">創造力をもった人とは、自分なりの考えをもって<br>
+					主体的に行動できる人です。</span>
+				</h2>
 			</section>
 
 
