--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -98,7 +98,7 @@
 			</div>
 			<!--***イメージ画像下のパンくずリスト***-->
 			<ul class="n_breadcrumbs">
-				<li><a href="">N高等学校　|  通信制高校(広域)・単位制</a></li>
+				<li><a href="">N高等学校 | 通信制高校(広域)・単位制</a></li>
 				<li>N高について</li>
 			</ul>
 
@@ -112,7 +112,15 @@
 					<span class="my_thinking">創造力をもった人とは、自分なりの考えをもって<br>
 					主体的に行動できる人です。</span>
 				</h2>
+				<p class="learn_creativity">
+				私たちの考える創造力とは、新しいモノを生み出す力だけではなく、自由な発送で考<br>
+				え、主体性をもって問題に取り組む力を指します。インターネットが社会に広がり、<br>
+				私たちの生活は大きく変わりました。インターネットを活用すれば、世界中の情報は<br>
+				誰にでも簡単に手に入ります。情報そのものだけでは価値を生まず、その情報を元に<br>
+				自分なりに考え、主体的に動ける人が価値を生み出せるのです。<br>
+				創造力を身につけるために、教養、思考力、実践力の三つを学びます。</p>
 			</section>
+
 
 
 
