教育方針のh2見出しの装飾作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -121,7 +121,15 @@
 				創造力を身につけるために、教養、思考力、実践力の三つを学びます。</p>
 			</section>
 
+			<section id="educational_policy">
+				<h2 id="education">
+					教育方針
+				</h2>
 
+
+
+
+			</section>
 
 
 		</main>
