h2下のリスト位置を調整

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -125,6 +125,13 @@
 				<h2 id="education">
 					教育方針
 				</h2>
+				<div class="three_power">
+					<ul class="three_item">
+						<li><span class="list_three">教　養</span><span class="three_list">自分なりの考えをもつための知識</span></li>
+						<li><span class="list_three">思考力</span><span class="three_list">知識を使って考える力</span></li>
+						<li><span class="list_three">実践力</span><span class="three_list">考えを行動に移す力</span></li>
+					</ul>
+				</div>
 
 
 
