トライアングルの画像を挿入

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -131,6 +131,7 @@
 						<li><span class="list_three">思考力</span><span class="three_list">知識を使って考える力</span></li>
 						<li><span class="list_three">実践力</span><span class="three_list">考えを行動に移す力</span></li>
 					</ul>
+					<img src="./image/triangle.png" alt="教育方針のトライアングル図式" class="triangle">
 				</div>
 
 
