・aタグの範囲を修正 ・pタグの文章体裁を修正中 ・hover:opacityを画像のみに適用できるよう修正中

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -134,20 +134,18 @@
 					<img src="./image/triangle.png" alt="教育方針のトライアングル図式" class="triangle">
 				</div>
 
-				<a href="" class="nstandard_a">
+				
 				<div class="nstandard_link">
+				<a href="" class="nstandard_a">
 					<img src="./image/nschool_logo.png" alt="N高のスタンダード" class="nstandard_logo">
 					<h2 id="nstandard_info">N STANDARDS</h2>
 						<p class="nstandard_text">
-						N高等学校では教育方針をより具体化したN<br>
-						STANDARD-エヌ スタンダード-という行動規範を設<br>
-						けております。生徒・教職員はN STANDARDに記載さ<br>
-						れた12の項目を常に意識することを心がけています<br>
+						N高等学校では教育方針をより具体化したNSTANDARD-エヌ スタンダード-という行動規範を設けております。生徒・教職員はN STANDARDに記載された12の項目を常に意識することを心がけています
 						</p>
 						<p class="read_more">Read More</p>
-
-				</div>
 				</a>
+				</div>
+				
 
 
 
