--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -138,7 +138,7 @@
 				<div class="nstandard_link">
 				<a href="" class="nstandard_a">
 					<img src="./image/nschool_logo.png" alt="N高のスタンダード" class="nstandard_logo">
-					<h2 id="nstandard_info">N STANDARDS</h2>
+					<h2 class="nstandard_info">N STANDARDS</h2>
 						<p class="nstandard_text">
 						N高等学校では教育方針をより具体化したNSTANDARD-エヌ スタンダード-という行動規範を設けております。生徒・教職員はN STANDARDに記載された12の項目を常に意識することを心がけています
 						</p>
