N高の魅力ブロックの制作開始 ※h2の太線位置が文字数の関係で合わないので要修正

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -121,8 +121,9 @@
 				創造力を身につけるために、教養、思考力、実践力の三つを学びます。</p>
 			</section>
 
+			<!--***教育方針の項目***-->
 			<section id="educational_policy">
-				<h2 id="education">
+				<h2 class="heading">
 					教育方針
 				</h2>
 				<div class="three_power">
@@ -134,7 +135,6 @@
 					<img src="./image/triangle.png" alt="教育方針のトライアングル図式" class="triangle">
 				</div>
 
-				
 				<div class="nstandard_link">
 				<a href="" class="nstandard_a">
 					<img src="./image/nschool_logo.png" alt="N高のスタンダード" class="nstandard_logo">
@@ -145,9 +145,11 @@
 						<p class="read_more">Read More</p>
 				</a>
 				</div>
-				
+			</section>
 
-
+			<!--***N高の魅力の項目***-->
+			<section id="nschool_attraction">
+				<h2 class="heading">N高の魅力</h2>
 
 			</section>
 
