・見出し下のh2作成 ・下線を作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -150,7 +150,14 @@
 			<!--***N高の魅力の項目***-->
 			<section id="nschool_attraction">
 				<h2 class="heading">N高の魅力</h2>
+				<!--***N高の魅力 上のブロック***-->
+				<div class="n_many_time">
+				<h2 class="many_time">ネットの高校だから<br>やりたい事に多くの時間を使える</h2>
+				
 
+
+
+				</div>
 			</section>
 
 
