文章のテンプレート作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -153,10 +153,12 @@
 				<!--***N高の魅力 上のブロック***-->
 				<div class="n_many_time">
 				<h2 class="many_time">ネットの高校だから<br>やりたい事に多くの時間を使える</h2>
-				
-
-
-
+					<p class="p_standard">
+					N高等学校は、インターネットと通信制高校の制度を活用した新
+					しい高校です。そのため、高校卒業のための学習にかかる拘束時間
+					を最小限にとどめる事ができます。だから自分が学びたい事に
+					多くの時間を充てる事ができます。
+					</p>
 				</div>
 			</section>
 
