アドバンスドプログラムの項目を作成 ・以下のクラスを使い回し div：n_many_time h2：n_many_time img：n_schedule

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -154,15 +154,27 @@
 				<div class="n_many_time">
 				<h2 class="many_time">ネットの高校だから<br>やりたい事に多くの時間を使える</h2>
 					<p class="p_standard">
-					N高等学校は、インターネットと通信制高校の制度を活用した新
-					しい高校です。そのため、高校卒業のための学習にかかる拘束時間
-					を最小限にとどめる事ができます。だから自分が学びたい事に
-					多くの時間を充てる事ができます。
+					N高等学校は、インターネットと通信制高校の制度を活用した新しい高校です。
+					そのため、高校卒業のための学習にかかる拘束時間を最小限にとどめる事ができます。
+					だから自分が学びたい事に多くの時間を充てる事ができます。
+					</p>
+					<p class="supplement">
+					Basic Program : 高校卒業資格取得のための必修授業<br>
+					Advanced Program : 将来に繋げる豊富な選択授業
 					</p>
 				</div>
+				<img src="./image/nschool_schedule.png" alt="N高生の1日例" class="n_schedule">
 			</section>
-
-
+			<!--***Advanced Programの右ブロック***-->
+			<section id="advanced_program">
+				<div class="n_many_time">
+				<h2 class="many_time">増えた時間で<br>将来へ繋がる多くの経験ができる</h2>
+					<p class="p_standard">
+					N高では将来へ繋がるオリジナル授業であるAdvanced<br>Program（アドバンスド プログラム）を
+					数多く用意しております。多くの経験からやりたい事を見つけましょう。</p>
+				</div>
+				<img src="./image/many_program.png" alt="アドバンスドプログラムのイメージ図" class="n_schedule">
+			</section>
 		</main>
 
 
