--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -108,7 +108,7 @@
 					<span class="creativity">IT×グローバル社会を生き抜く<br>
 					"創造力"を身につけ、<br>世界で活躍する人材を育成する。</span>
 				</h2>
-				<h2 id="subjective_action">
+				<h2 class="subjective_action">
 					<span class="my_thinking">創造力をもった人とは、自分なりの考えをもって<br>
 					主体的に行動できる人です。</span>
 				</h2>
@@ -176,10 +176,15 @@
 				<img src="./image/many_program.png" alt="アドバンスドプログラムのイメージ図" class="n_schedule">
 			</section>
 		</main>
+			<!--***高卒資格取得のためのBasic Program***-->
+			<div id="n_school_infolist">
+				<section class="basicprogram_info">
+				<h2 class="standard_heading">高卒資格取得のためのBasic Program</h2>
 
 
 
-
+				</section>
+			</div>
 
 	</body>
 </html>
