Basic Program H2下のテキスト作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -180,7 +180,9 @@
 			<div id="n_school_infolist">
 				<section class="basicprogram_info">
 				<h2 class="standard_heading">高卒資格取得のためのBasic Program</h2>
-
+					<p class="p_standard_center">
+					ネットと通信制高校の制度を活用して、<br>一般的な全日制高校と比べ短い拘束時間で高校卒業資格を得ることが可能です。
+					</p>
 				</section>
 			</div>
 		
