授業を動画で視聴の項目 ・画像を左に配置

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -183,6 +183,13 @@
 					<p class="p_standard_center">
 					ネットと通信制高校の制度を活用して、<br>一般的な全日制高校と比べ短い拘束時間で高校卒業資格を得ることが可能です。
 					</p>
+				<div class="AP_block">
+				<img src="./image/video_study.png" alt="スマホ・PCで授業を視聴" class="image_left">
+				<div class="info_right">
+
+				</div>
+
+				</div>
 				</section>
 			</div>
 		
