Basic Programの黒ブロックを作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -186,6 +186,10 @@
 				<div class="AP_block">
 				<img src="./image/video_study.png" alt="スマホ・PCで授業を視聴" class="image_left">
 				<div class="info_right">
+					<div class="bp_block">Basic Program</div>
+					
+
+
 
 				</div>
 
