Basic Programの説明文章右バージョン完成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -184,11 +184,21 @@
 					ネットと通信制高校の制度を活用して、<br>一般的な全日制高校と比べ短い拘束時間で高校卒業資格を得ることが可能です。
 					</p>
 				<div class="AP_block">
-				<img src="./image/video_study.png" alt="スマホ・PCで授業を視聴" class="image_left">
-				<div class="info_right">
-					<div class="bp_block">Basic Program</div>
-					
-
+					<img src="./image/video_study.png" alt="スマホ・PCで授業を視聴" class="image_left">
+					<div class="info_right">
+						<div class="bp_block">Basic Program</div>
+						<h2 class="bp_heading">
+						高校卒業資格を<br>取得するための授業は<br>スマホ・パソコンで。
+						</h2>
+						<p class="p_adblock">
+						映像学習やレポートはネット上で行うので郵送の手間もなく、学習を進められます。
+						映像授業は東京書籍(株)のインターネット講座を使用するため、安心して学ぶ事ができます。
+						</p>
+						<p class="supplement">
+						※N高等学校は学校教育法第1条に定められた高等学校です。全日制と同じ卒業資格を取得することができます。
+						</p>
+						<p class="read_more">Read More</p>
+					</div>
 
 
 				</div>
