スクーリングの説明ブロック作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -183,9 +183,10 @@
 					<p class="p_standard_center">
 					ネットと通信制高校の制度を活用して、<br>一般的な全日制高校と比べ短い拘束時間で高校卒業資格を得ることが可能です。
 					</p>
+				<!--***授業の説明***-->	
 				<div class="AP_block">
 					<img src="./image/video_study.png" alt="スマホ・PCで授業を視聴" class="image_left">
-					<div class="info_right">
+					<div class="info_block_right">
 						<a href="" class="nstandard_a">
 						<div class="bp_block">Basic Program</div>
 						<h2 class="bp_heading">
@@ -202,8 +203,29 @@
 						</a>
 					</div>
 
+					<!--***スクーリングの説明***-->	
+					<div class="info_block_left">
+						<a href="" class="nstandard_a">
+						<div class="bp_block">Basic Program</div>
+						<h2 class="bp_heading">
+						学校に通うのは<br>年5日間程度の<br>スクーリングだけ。
+						</h2>
+						<p class="supplement">
+						※標準履修でかつネット学習の状況により適用される日数です。
+						</p>
+						<p class="p_adblock">
+						スクーリングは沖縄伊計本校と全国のスクーリング会場から選べます
+						。沖縄本校のスクーリングは大自然の中で充実した学びと、思い出を提供します。また各地域に設置された会場でもスクーリングが可能です。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+					</div>
+						<img src="./image/schooling.png" alt="スクーリングについて" class="image_right">
+
 
 				</div>
+
+
 
 				</div>
 				</section>
