・Advanced Programのブロック制作スタート ・h2の下線を作成 → 使い回したいがabsoluteにしていると都度作る必要がある

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -176,15 +176,15 @@
 				<img src="./image/many_program.png" alt="アドバンスドプログラムのイメージ図" class="n_schedule">
 			</section>
 		</main>
-			<!--***高卒資格取得のためのBasic Program***-->
-			<div id="n_school_infolist">
-				<section class="basicprogram_info">
-				<h2 class="standard_heading">高卒資格取得のためのBasic Program</h2>
+		<!--***高卒資格取得のためのBasic Program***-->
+		<div id="n_school_infolist">
+			<section class="basicprogram_info">
+				<h2 class="basicprogram_heading">高卒資格取得のためのBasic Program</h2>
 					<p class="p_standard_center">
 					ネットと通信制高校の制度を活用して、<br>一般的な全日制高校と比べ短い拘束時間で高校卒業資格を得ることが可能です。
 					</p>
 				<!--***授業の説明***-->	
-				<div class="AP_block">
+				<div class="BP_block">
 					<img src="./image/video_study.png" alt="スマホ・PCで授業を視聴" class="image_left">
 					<div class="info_block_right">
 						<a href="" class="nstandard_a">
@@ -221,15 +221,20 @@
 						</a>
 					</div>
 						<img src="./image/schooling.png" alt="スクーリングについて" class="image_right">
-
-
 				</div>
+			</section>
+			<!--***将来に繋がるAdvanced Program***-->	
+			<section class="AP_block">
+			<h2 class="advanced_heading">プロフェッショナルによる将来へ繋がるAdvanced Program</h2>
+					<p class="p_standard_center">
+					Advanced Program(アドバンスド プログラム)とは、
+					<br>任意で受講する選択式授業です。
+					</p>
 
 
 
-				</div>
-				</section>
-			</div>
+
+		</div>
 		
 
 
