「N高生なら〜多くの授業があります」のブロック作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -225,11 +225,27 @@
 			</section>
 			<!--***将来に繋がるAdvanced Program***-->	
 			<section class="AP_block">
-			<h2 class="advanced_heading">プロフェッショナルによる将来へ繋がるAdvanced Program</h2>
-					<p class="p_standard_center">
-					Advanced Program(アドバンスド プログラム)とは、
-					<br>任意で受講する選択式授業です。
-					</p>
+				<h2 class="advanced_heading">プロフェッショナルによる将来へ繋がるAdvanced Program</h2>
+						<p class="p_standard_center">
+						Advanced Program(アドバンスド プログラム)とは、
+						<br>任意で受講する選択式授業です。
+						</p>
+				<img src="./image/many_lesson.png" alt="無料で学べる多くの授業" class="image_left">
+				<div class="info_block_right">
+						<a href="" class="nstandard_a">
+						<div class="bp_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						N高生なら<br>学校の授業とは別に<br>無料で学べる<br>多くの授業があります。
+						</h2>
+						<p class="p_adblock">
+						ネットで行うアドバンスト　プログラムでは生放送と教材がセットになった専用アプリを使用。
+						大学受験、プログラミング、文芸小説、外国語、イラストレーター、コミック等ではN予備校
+						を使用して生放送とオリジナル教材で将来への学習ができます。授業等ではN予備校を使用して
+						生放送とオリジナル教材で将来への学習ができます。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
 
 
 
