・予備校講師のブロック作成 ・classのタイトル修正

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -188,7 +188,7 @@
 					<img src="./image/video_study.png" alt="スマホ・PCで授業を視聴" class="image_left">
 					<div class="info_block_right">
 						<a href="" class="nstandard_a">
-						<div class="bp_block">Basic Program</div>
+						<div class="ab_block">Basic Program</div>
 						<h2 class="bp_heading">
 						高校卒業資格を<br>取得するための授業は<br>スマホ・パソコンで。
 						</h2>
@@ -206,7 +206,7 @@
 					<!--***スクーリングの説明***-->	
 					<div class="info_block_left">
 						<a href="" class="nstandard_a">
-						<div class="bp_block">Basic Program</div>
+						<div class="ab_block">Basic Program</div>
 						<h2 class="bp_heading">
 						学校に通うのは<br>年5日間程度の<br>スクーリングだけ。
 						</h2>
@@ -233,7 +233,7 @@
 				<img src="./image/many_lesson.png" alt="無料で学べる多くの授業" class="image_left">
 				<div class="info_block_right">
 						<a href="" class="nstandard_a">
-						<div class="bp_block">Advanced Program</div>
+						<div class="ab_block">Advanced Program</div>
 						<h2 class="bp_heading">
 						N高生なら<br>学校の授業とは別に<br>無料で学べる<br>多くの授業があります。
 						</h2>
@@ -246,7 +246,18 @@
 						<p class="read_more">Read More</p>
 						</a>
 				</div>
-
+				<!--***実力派予備校講師のブロック***-->	
+				<div class="info_block_left">
+						<a href="" class="nstandard_a">
+						<div class="ab_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						実力派予備校講師<br>による合格するための<br>大学受験対策授業。
+						</h2>
+						<p class="p_adblock">
+						有名予備校講師11名による生授業と講師による授業に紐づいた教材で大学合格を目指せます。アプリでは50冊分以上ボリュームを誇る参考書・問題集が利用できます。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
 
 
 
