・予備校教師のブロック作成 ・プログラミング授業のブロック作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -258,8 +258,24 @@
 						</p>
 						<p class="read_more">Read More</p>
 						</a>
-
-
+				</div>
+				<img src="./image/teacher.png" alt="予備校教師の受験対策授業" class="image_right">
+				<!--***プログラミング授業***-->	
+				<img src="./image/programing_lesson.png" alt="無料で学べる多くの授業" class="image_left">
+				<div class="info_block_right">
+						<a href="" class="nstandard_a">
+						<div class="ab_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						ドワンゴの<br>トップエンジニアが<br>教える、実践的な<br>プログラミング授業
+						</h2>
+						<p class="p_adblock">
+						IT業界の最前線で活躍するプログラマが教える、実践的なプログラミング。全ての
+						カリキュラムを終えた時、即戦力のプログラマとして実力が身に付いている事を
+						約束します。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
 
 		</div>
 		
