・専門授業のブロック作成 ・職業訓練のブロック作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -276,6 +276,39 @@
 						<p class="read_more">Read More</p>
 						</a>
 				</div>
+				<!--***専門的な授業***-->	
+				<div class="info_block_left">
+						<a href="" class="nstandard_a">
+						<div class="ab_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						小説、漫画、イラスト、<br>ファッション、<br>パテェシエなど専門的な、<br>授業も盛りだくさん。
+						</h2>
+						<p class="p_adblock">
+						夢の職業を学ぶ。夢を見つける為に、様々な仕事に触れる。多くの専門的な職業のアドバンストプログラムを通して、自らの将来を描くことができます。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
+				<img src="./image/expert_lesson.png" alt="専門的な授業" class="image_left">
+				<!--***職業体験***-->	
+				<img src="./image/job_experience.png" alt="職業体験について" class="image_left">
+				<div class="info_block_right">
+						<a href="" class="nstandard_a">
+						<div class="ab_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						日本各地の職業を<br>リアルで体験。<br>高校時代から社会と<br>関わる職業体験
+						</h2>
+						<p class="p_adblock">
+						N高では多くの自治体や企業、団体と協力し、生徒が様々な地域で職業体験が出来る機会を作ります。
+						多くの仕事に触れることで得た広い視野と価値観は一生の財産になります。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
+
+
+
+
 
 		</div>
 		
