--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -305,9 +305,35 @@
 						<p class="read_more">Read More</p>
 						</a>
 				</div>
-
-
-
+				<!--***国際教育プログラム***-->
+				<div class="info_block_left">
+						<a href="" class="nstandard_a">
+						<div class="ab_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						世界の最先端を学ぶ<br>国際教育プログラム。
+						</h2>
+						<p class="p_adblock">
+						海外大学　国際教育プログラム<br>国際的な生徒育成を目的とするN高等学校では世界の提携校のプログラムに参加する生徒を毎年募集しています。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
+				<img src="./image/global_program.png" alt="国際教育プログラム" class="image_right">
+				<!--***中学までの学習範囲学び直し***-->
+				<img src="./image/relearn.png" alt="中学までの学習範囲学び直し" class="image_left">
+				<div class="info_block_right">
+						<a href="" class="nstandard_a">
+						<div class="ab_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						中学までの<br>学習範囲を学び直す<br>中学復習授業
+						</h2>
+						<p class="p_adblock">
+						N高では義務教育課程の学び直しをサポートします。中学での学習が原因で、高校の単位取得授業に
+						不安がある方でも再学習することができます。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
 
 
 		</div>
