ITツールを高校時代から利用のブロックを作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -112,6 +112,7 @@
 					<span class="my_thinking">創造力をもった人とは、自分なりの考えをもって<br>
 					主体的に行動できる人です。</span>
 				</h2>
+				<div class="h2_border_bottom"></div>
 				<p class="learn_creativity">
 				私たちの考える創造力とは、新しいモノを生み出す力だけではなく、自由な発送で考<br>
 				え、主体性をもって問題に取り組む力を指します。インターネットが社会に広がり、<br>
@@ -334,11 +335,30 @@
 						<p class="read_more">Read More</p>
 						</a>
 				</div>
-
-
 		</div>
-		
+		<!--***中学までの学習範囲学び直し***-->
+		<section class="basicprogram_info_half">
+			<div class="one_block">
+				
+					<h2 class="basicprogram_heading">先端企業が使用するITツールを高校時代から利用</h2>
+						<div class="h2_border_bottom"></div>
+				<div class="info_block_left">
+					<a href="" class="nstandard_a">
+						<h2 class="bp_heading">
+						slack、 Github、<br>G Suite for Education<br>などのITツールを<br>
+						利用した<br>コミュニケーションと<br>学習。
+						</h2>
+						<p class="p_adblock">
+						ネットの高校であるN高では現在、多くの企業で取り入れられているITツールを高校生の段階から
+						利用します。社会へ出る前からIT社会への対応力を養うことができます。
+						</p>
+						<p class="read_more">Read More</p>
+					</a>
+				</div>
+				<img src="./image/IT_item.png" alt="ITツールを利用" class="image_right">
+			</div>
 
+		</section>
 
 
 	</body>
