学校行事のブロック作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -336,10 +336,9 @@
 						</a>
 				</div>
 		</div>
-		<!--***中学までの学習範囲学び直し***-->
-		<section class="basicprogram_info_half">
+		<!--***先端企業が使用するITツールを高校時代から利用***-->
+		<section class="block_gray">
 			<div class="one_block">
-				
 					<h2 class="basicprogram_heading">先端企業が使用するITツールを高校時代から利用</h2>
 						<div class="h2_border_bottom"></div>
 				<div class="info_block_left">
@@ -357,10 +356,35 @@
 				</div>
 				<img src="./image/IT_item.png" alt="ITツールを利用" class="image_right">
 			</div>
-
+		</section>
+		<!--***学校行事はネットとリアルで***-->
+		<section class="block_white">
+			<div class="one_block">
+				<h2 class="basicprogram_heading">学校行事はネットとリアルで</h2>
+					<div class="h2_border_bottom"></div>
+				<img src="./image/school_events.png" alt="学校行事について" class="image_left">
+				<div class="info_block_right">
+						<a href="" class="nstandard_a">
+						<div class="ab_block">Advanced Program</div>
+						<h2 class="bp_heading">
+						仲間と一緒に高校生活を楽<br>しむための<br>ネットリアル&amp;リアルイベントが<br>
+						盛りだくさん。
+						</h2>
+						<p class="p_adblock">
+						ニコニコ超会議での文化祭や遠足など、エンターテイメントのプロの現場を体感できます。
+						仲間と出会い力を合わせても目標を達成する喜びや経験は貴重な財産になるはずです。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
+			</div>
 		</section>
 
 
+
+
+			</div>
+		</section>
 	</body>
 </html>
 
