--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -365,9 +365,8 @@
 				<img src="./image/school_events.png" alt="学校行事について" class="image_left">
 				<div class="info_block_right">
 						<a href="" class="nstandard_a">
-						<div class="ab_block">Advanced Program</div>
 						<h2 class="bp_heading">
-						仲間と一緒に高校生活を楽<br>しむための<br>ネットリアル&amp;リアルイベントが<br>
+						仲間と一緒に高校生活を楽<br>しむための<br>ネット&amp;リアルイベントが<br>
 						盛りだくさん。
 						</h2>
 						<p class="p_adblock">
@@ -379,6 +378,86 @@
 				</div>
 			</div>
 		</section>
+		<!--***N高起業部***-->
+		<section class="block_gray">
+			<div class="one_block">
+					<h2 class="basicprogram_heading">N高起業部</h2>
+						<div class="h2_border_bottom"></div>
+				<div class="info_block_left">
+					<a href="" class="nstandard_a">
+						<h2 class="bp_heading">
+						高校生だから起業する。
+						</h2>
+						<p class="p_adblock">
+						年間の法人の起業件数は約5万件。もはや、起業は選択肢のひとつ。N高は学生が起業家を目指すことで、イノベーティブな考え方を学び、日本や世界を支える人材を育成するため、起業部を立ち上げます。
+						</p>
+						<p class="read_more">Read More</p>
+					</a>
+				</div>
+				<img src="./image/nschool_startup.png" alt="N高起業部について" class="image_right">
+			</div>
+		</section>
+		<!--***部活動***-->
+		<section class="block_white">
+			<div class="one_block">
+				<h2 class="basicprogram_heading">全国の仲間とともに活動する部活動</h2>
+					<div class="h2_border_bottom"></div>
+				<img src="./image/club.png" alt="部活動について" class="image_left">
+				<div class="info_block_right">
+						<a href="" class="nstandard_a">
+						<h2 class="bp_heading">
+						部活を通じて<br>仲間と出会い成長する。
+						</h2>
+						<p class="p_adblock">
+						N高ではネットの高校独自の部活動があります。囲碁、将棋、競技プログラミング、
+						eスポーツである格闘ゲームなど。全国のN高生とともに切磋琢磨して成長する
+						ことができます。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+				</div>
+			</div>
+		</section>
+		<!--***ネットの高校は2つの入学コースが選べます***-->
+		<section class="basicprogram_info">
+				<h2 class="basicprogram_heading">ネットの高校は2つの入学コースが選べます</h2>
+					<div class="h2_border_bottom"></div>
+				<div class="BP_block">
+					<!--***ネットコースの説明***-->
+					<div class="info_block_left">
+						<a href="" class="nstandard_a">
+						<h2 class="bp_heading">
+						ネットの高校だから<br>全国各地から<br>入学できる<br>ネットコース。
+						</h2>
+						<p class="p_adblock">
+						今、社会が欲する多様性を持った人材を輩出することを目的とした教育プログラムを全国各地
+						から学ぶことができます。高卒資格取得と、他では得られない学習を経験しましょう。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+					</div>
+					<img src="./image/net_course.png" alt="ネットコースについて" class="image_right">
+					<!--***通学コースの説明***-->
+					<img src="./image/commuting_to_school.png" alt="通学コースについて" class="image_left">
+					<div class="info_block_right">
+						<a href="" class="nstandard_a">
+						<h2 class="bp_heading">
+						ネットの高校の<br>強みを生かした<br>常識を変え、<br>世界を変える人材を育む<br>通学コース
+						</h2>
+						<p class="p_adblock">
+						N高の通学コースでは、IT・グローバル社会で活躍するために必要な、基礎知識、実践力、思考力を
+						備え、新たな価値を生み出す"創造力"を身につけることができます。日本で唯一の超実践的
+						カリキュラムが、世界を変える人材を育成します。
+						</p>
+						<p class="read_more">Read More</p>
+						</a>
+					</div>
+				</div>
+		</section>
+
+
+
+
 
 
 
