--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -454,16 +454,36 @@
 					</div>
 				</div>
 		</section>
-
-
-
-
-
-
-
-
+		<!--***N高との提携スクール***-->
+		<section class="block_white">
+			<div class="one_block">
+				<h2 class="basicprogram_heading">より目的に特化したN高との提携スクール</h2>
+						<div class="h2_border_bottom"></div>
+				<div class="info_block_left">
+					<a href="" class="nstandard_a">
+						<h2 class="bp_heading">
+						将来を考え、<br>夢や目標に一直線な<br>あなたのための<br>提携スクール。
+						</h2>
+						<p class="p_adblock">
+						プログラミング、ファッション、ゲーム、アニメ、パティシエ、美容、国際教養プログラムなど、
+						夢や目標に突き進みたいN高生のための提携スクール。
+						</p>
+						<p class="read_more">Read More</p>
+					</a>
+				</div>
+				<img src="./image/partnership_school.png" alt="提携スクールについて" class="image_right">
 			</div>
 		</section>
+		<!--***四方のリンクブロック***-->
+		<div id="block_gray_half">
+			<div id="fourblock_link">
+			<ul class="four_link">
+				<li>N高生からのメッセージ</li>
+				<li></li>
+			</ul>
+
+			</div>
+		</div>
 	</body>
 </html>
 
