四方リンクの位置を調整 ・aタグにdisplay : flex;  justify-content: space-between; で調整 ・文字の位置調整に着手

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -477,11 +477,16 @@
 		<!--***四方のリンクブロック***-->
 		<div id="block_gray_half">
 			<div id="fourblock_link">
-			<ul class="four_link">
-				<li>N高生からのメッセージ</li>
-				<li></li>
-			</ul>
-
+				<a href="" class="four_link_a">
+					<ul class="four_link">
+						<li><span class="fourblock_link_list_top">N高生からのメッセージ</span></li>
+						<li><span class="fourblock_link_list_bottom">私たちがN高を選んだ理由。</span></li>
+					</ul>
+					<ul class="four_link">
+						<li><span class="fourblock_link_list_top">N高生からのメッセージ</span></li>
+						<li><span class="fourblock_link_list_bottom">私たちがN高を選んだ理由。</span></li>
+					</ul>
+				</a>
 			</div>
 		</div>
 	</body>
