--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -479,12 +479,12 @@
 			<div id="fourblock_link">
 				<a href="" class="four_link_a">
 					<ul class="four_link">
-						<li><span class="fourblock_link_list_top">N高生からのメッセージ</span></li>
-						<li><span class="fourblock_link_list_bottom">私たちがN高を選んだ理由。</span></li>
+						<li><span class="fourblock_link_list_top">N高生からのメッセージ</span><br>
+						<span class="fourblock_link_list_bottom">私たちがN高を選んだ理由。</span></li>
 					</ul>
 					<ul class="four_link">
-						<li><span class="fourblock_link_list_top">N高生からのメッセージ</span></li>
-						<li><span class="fourblock_link_list_bottom">私たちがN高を選んだ理由。</span></li>
+						<li><span class="fourblock_link_list_top">学校関係者・著名人からのメッセージ</span><br>
+						<span class="fourblock_link_list_bottom">これから教育が変わる。学びのカタチが変わる。</span></li>
 					</ul>
 				</a>
 			</div>
