・aタグの囲う範囲を修正 ・flexboxを親要素(#fourblock_link)に移動

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -482,6 +482,8 @@
 						<li><span class="fourblock_link_list_top">N高生からのメッセージ</span><br>
 						<span class="fourblock_link_list_bottom">私たちがN高を選んだ理由。</span></li>
 					</ul>
+				</a>
+				<a href="" class="four_link_a">
 					<ul class="four_link">
 						<li><span class="fourblock_link_list_top">学校関係者・著名人からのメッセージ</span><br>
 						<span class="fourblock_link_list_bottom">これから教育が変わる。学びのカタチが変わる。</span></li>
