リンク集の下段を作成

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -477,6 +477,7 @@
 		<!--***四方のリンクブロック***-->
 		<div id="block_gray_half">
 			<div id="fourblock_link">
+				<!--***リンクブロック上段***-->
 				<a href="" class="four_link_a">
 					<ul class="four_link">
 						<li><span class="fourblock_link_list_top">N高生からのメッセージ</span><br>
@@ -489,7 +490,23 @@
 						<span class="fourblock_link_list_bottom">これから教育が変わる。学びのカタチが変わる。</span></li>
 					</ul>
 				</a>
+				<!--***リンクブロック下段***-->
+				<a href="" class="four_link_a">
+					<ul class="four_link_bottom">
+						<li><span class="fourblock_link_list_top">N高等学校保護者の声</span><br>
+						<span class="fourblock_link_list_bottom">N高に入学した生徒の保護者のみなさまにお話を伺いました。</span></li>
+					</ul>
+				</a>
+				<a href="" class="four_link_a">
+					<ul class="four_link_bottom">
+						<li><span class="fourblock_link_list_top">入学案内</span><br>
+						<span class="fourblock_link_list_bottom">入学は年に4回。自分のタイミングで入学できる。前籍校の単位も引き継げるので点入学で友達と同じタイミングで卒業も可能。</span></li>
+					</ul>
+				</a>
+
 			</div>
+
+
 		</div>
 	</body>
 </html>
