お問い合わせブロックの背景画像を表示

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -506,7 +506,7 @@
 			</div>
 		</div>
 		<!--***youtubeブロック***-->
-		<section class="block_white">
+		<section class="block_white_y">
 			<div class="one_block">
 				<div class="youtube_info">
 					<iframe width="343" height="193" src="https://www.youtube.com/embed/xhOsnY-k8JM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -519,7 +519,14 @@
 			</div>
 		</section>
 
-		</div>
+		<footer id="footer_block">
+			<div id="contact">
+
+
+
+			</div>
+		</footer>
+
 	</body>
 </html>
 
