--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -518,14 +518,20 @@
 				</div>
 			</div>
 		</section>
-
+		<!--***N高のお問い合わせブロック***-->
 		<footer id="footer_block">
 			<div id="contact">
 				<p class="more_detail">N高についてさらに詳細を知りたい方はこちら</p>
-
-
-
-
+				<div class="contact_links">
+					<ul class="contact_links_left">
+						<a href="" class="contact_link_a"><li><img src="./image/document_request.png" alt="資料請求のリンク"></li></a>
+						<a href="" class="contact_link_a"><li><img src="./image/briefing.png" alt="説明会・相談会のリンク"></li></a>
+					</ul>
+					<ul class="contact_links_right">
+						<a href="" class="contact_link_a"><li><img src="./image/contact_tel.png" alt="N高のお問い合わせ電話番号"></li></a>
+						<a href="" class="contact_link_a"><li>WEBからお問い合わせ</li></a>
+					</ul>
+				</div>
 			</div>
 		</footer>
 
