リンクの位置調整 大枠完了

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -528,7 +528,7 @@
 						<a href="" class="contact_link_a"><li><img src="./image/briefing.png" alt="説明会・相談会のリンク"></li></a>
 					</ul>
 					<ul class="contact_links_right">
-						<a href="" class="contact_link_a"><li><img src="./image/contact_tel.png" alt="N高のお問い合わせ電話番号"></li></a>
+						<li><img src="./image/contact_tel.png" alt="N高のお問い合わせ電話番号"></li>
 						<a href="" class="contact_link_a"><li>WEBからお問い合わせ</li></a>
 					</ul>
 				</div>
