・Webからのお問い合わせ 枠を作成 ・位置を調整

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -518,8 +518,9 @@
 				</div>
 			</div>
 		</section>
-		<!--***N高のお問い合わせブロック***-->
+
 		<footer id="footer_block">
+		<!--***N高のお問い合わせブロック***-->
 			<div id="contact">
 				<p class="more_detail">N高についてさらに詳細を知りたい方はこちら</p>
 				<div class="contact_links">
@@ -529,10 +530,18 @@
 					</ul>
 					<ul class="contact_links_right">
 						<li><img src="./image/contact_tel.png" alt="N高のお問い合わせ電話番号"></li>
-						<a href="" class="contact_link_a"><li>WEBからお問い合わせ</li></a>
+						<a href="" class="contact_link_a"><li><span class="web_contact">WEBからお問い合わせ</span></li></a>
 					</ul>
 				</div>
 			</div>
+
+
+
+
+
+
+
+
 		</footer>
 
 	</body>
