--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -534,8 +534,18 @@
 					</ul>
 				</div>
 			</div>
-
-
+		<!--*** フッターのグローバルナビ***-->
+				<ul class="footer_navi">
+					<li><a href="">トップ</a></li>
+					<li><a href="">中3生・新入生の方</a></li>
+					<li><a href="">転入生の方</a></li>
+					<li><a href="">編入生の方</a></li>
+					<li><a href="">保護者・教育関係者の方</a></li>
+					<li><a href="">海外在住の方</a></li>
+				</ul>
+			
+		<!--*** リンクのまとめ***-->
+		
 
 
 
