--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -542,10 +542,11 @@
 					<li><a href="">編入生の方</a></li>
 					<li><a href="">保護者・教育関係者の方</a></li>
 					<li><a href="">海外在住の方</a></li>
+					<li><a href="#wrap" class="page_top"><img src="./image/pagetop.png" alt="ページトップボタン"></li>
 				</ul>
-			
+
 		<!--*** リンクのまとめ***-->
-		
+
 
 
 
