グローバルナビのPage Topの位置を調整

--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -535,6 +535,7 @@
 				</div>
 			</div>
 		<!--*** フッターのグローバルナビ***-->
+			<nav class="global_nav">
 				<ul class="footer_navi">
 					<li><a href="">トップ</a></li>
 					<li><a href="">中3生・新入生の方</a></li>
@@ -542,15 +543,18 @@
 					<li><a href="">編入生の方</a></li>
 					<li><a href="">保護者・教育関係者の方</a></li>
 					<li><a href="">海外在住の方</a></li>
-					<li><a href="#wrap" class="page_top"><img src="./image/pagetop.png" alt="ページトップボタン"></li>
+					<li><a href="#n_header_bottom"><img src="./image/pagetop.png" class="page_top"></li>
 				</ul>
 
 		<!--*** リンクのまとめ***-->
+		
 
 
 
 
 
+
+			</nav>
 
 
 		</footer>
