--- a/n_highschool_kadai.html
+++ b/n_highschool_kadai.html
@@ -564,7 +564,26 @@
 				</ul>
 
 		<!--*** リンクのまとめ***-->
-		
+			<div class="footer_l_block">
+				<ul class="list_link">
+					<li><a href=""><span class="ap_font">アドバンスト プログラム</span><br><span class="first_child">Advanced Program</span></a></li>
+					<li><a href="">N予備校システム</a></li>
+					<li><a href="">大学受験</a></li>
+					<li><a href="">dwango×プログラミング</a></li>
+					<li><a href="">Dwango Media Village×機械学習</a></li>
+					<li><a href="">Webデザイン授業</a></li>
+					<li><a href="">KADOKAWA×文芸小説</a></li>
+					<li><a href="">電撃×エンタメ</a></li>
+					<li><a href="">Vantan×クリエイティブ</a></li>
+					<li><a href="">DTM・ボーカロイド授業</a></li>
+					<li><a href="">ものがたり創作授業</a></li>
+					<li><a href="">中学復習授業</a></li>
+					<li><a href="">企業、自治体、NPO×職業体験</a></li>
+					<li><a href="">N高マイプロジェクト</a></li>
+					<li><a href="">N高起業部</a></li>
+					<li><a href="">海外大学国際教育プログラム</a></li>
+				</ul>
+			</div>
 
 
 
